[package]
name = "os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# these disable stack unwinding, which is not supported by the kernel
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
